--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "start:frontend": "cd client && npm start",
-    "start:backend": "cd server && nodemon src/server.js",
+    "start:backend": "cd server && nodemon src/index.js",
     "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
   },
   "devDependencies": {
