--- a/server/.env-example
+++ b/server/.env-example
@@ -4,6 +4,8 @@ DATABASE_PORT
 POSTGRES_USER
 POSTGRES_DB
 POSTGRES_PASSWORD
+#Connection for migations
+DATABASE_URL
 FRONTEND_URL='http://localhost:3000'
 SALT
 JWT_SECRET
